--- a/m1l4-exercise-multiple-components/package.json
+++ b/m1l4-exercise-multiple-components/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "reactlab",
+  "name": "m1l4-exercise-multiple-components",
   "private": true,
   "dependencies": {
-    "coder": "^1.0.0",
+    "coder": "^0.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
