change package info

--- a/m2l1-exercise-dynamic-events/package.json
+++ b/m2l1-exercise-dynamic-events/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "reactlab",
+  "name": "m2l1-exercise-dynamic-events",
   "private": true,
   "dependencies": {
-    "coder": "^1.0.0",
+    "coder": "^0.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
